# mcfine

./: .gitignore  .readthedocs.yaml  CHANGELOG.rst  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: build.yml  publish.yml  pypi.yml  test_build.yml
docs/: advanced_topics.rst  conf.py  fitting_philosophy.rst  index.rst  install.rst  intro.rst  reference_api.rst  tutorial_fitting_a_spectrum.rst  tutorial_generating_a_spectrum.rst
docs/tutorials/: cube_fitting.rst  exploring_cube_fits.rst  fitting_a_cube.rst  fitting_a_spectrum.rst  generating_a_spectrum.rst  plotting_a_spectrum.rst  single_spectra_fitting.rst
mcfine/: __init__.py  emcee_funcs.py  fitting.py  fitting_funcs.py  line_info.py  line_shape_funcs.py  plotting.py  radex_funcs.py  utils.py  vars.py
mcfine/toml/: config_defaults.toml  local_defaults.toml
