[metadata]
name = mcfine
version = 0.1.1
author = Thomas Williams
author_email = williams@mpia.de
url = https://github.com/thomaswilliamsastro/mcfine
description = Muli-component, hyperfine fitting tool
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    astropy
    corner
    emcee
    lmfit
    matplotlib
    ndradexhyperfine
    numpy
    scipy
    tqdm
