[metadata]
name = mcfine
version = 0.1.3alpha
author = Thomas Williams
author_email = thomas.g.williams94@gmail.com
url = https://github.com/thomaswilliamsastro/mcfine
description = Muli-component, hyperfine fitting tool
long_description = file: README.rst
long_description_content_type = text/markdown
license = GNU
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    astropy
    corner
    emcee
    lmfit
    matplotlib
    ndradexhyperfine
    numdifftools
    numpy
    scipy
    tomli
    tqdm
